--- a/backend/package.json
+++ b/backend/package.json
@@ -11,20 +11,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-sdk": "^2.761.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.3",
+    "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^2.4.6",
     "mongodb": "^3.6.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.3",
     "promise-fs": "^2.1.1",
+    "rate-limiter-flexible": "^2.1.10",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0-pre.60",
     "tsyringe": "^4.3.0",
@@ -36,12 +42,14 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/hapi__joi": "^17.1.5",
+    "@types/ioredis": "^4.17.4",
     "@types/jest": "^26.0.13",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.27",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
     "@types/promise-fs": "^2.1.0",
+    "@types/redis": "^2.8.27",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "6.8.0",
